--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,35 @@
-version: '3'
-
-volumes:
-  production_elasticsearch_data: {}
+# docker-compose.yml - VERSÃO FINAL PYTHON
 
 services:
-  server: &server
-    build:
-      context: .
-      dockerfile: ./compose/local/server/Dockerfile
-    image: ecli_indexer_local_server
-    depends_on:
-      - elasticsearch
-    env_file:
-      - ./.envs/.local/.server
-    ports:
-      - "9100:9100"
-    command: /start
-    restart: always
-
   elasticsearch:
-    build:
-      context: .
-      dockerfile: ./compose/production/elasticsearch/Dockerfile
-    image: ecli_indexer_production_elasticsearch
-    env_file:
-      - ./.envs/.local/.elasticsearch
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - production_elasticsearch_data:/usr/share/elasticsearch/data
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.4.2
+    container_name: iurisadv-elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
       - "9200:9200"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - iurisadv-net
+
+  server:
+    build: .
+    container_name: iurisadv-server
+    depends_on:
+      - elasticsearch
+    volumes:
+      - ./:/app
+    ports:
+      - "3000:3000"
+    networks:
+      - iurisadv-net
+
+volumes:
+  elasticsearch_data: {}
+
+networks:
+  iurisadv-net:
+    driver: bridge
