--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.0.0",
+    "cheerio": "^1.1.2",
     "csv-parser": "^3.0.0",
     "express": "^4.17.3",
+    "fast-xml-parser": "^5.2.5",
     "jsdom": "^19.0.0",
+    "node-fetch": "^2.7.0",
     "pug": "^3.0.2"
   }
 }
