--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # requirements.txt
-Flask==2.3.2
+Flask==2.1.3
 Jinja2==3.0.3
 MarkupSafe>=2.0
+Werkzeug==2.1.2
 elasticsearch==8.4.2
 beautifulsoup4==4.12.2
 requests==2.31.0
